[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/gameplay/settings_panel.gd" type="Script" id=1]
[ext_resource path="res://themes/gameplay.tres" type="Theme" id=2]

[node name="SettingsPanel" type="ScrollContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -323.0
margin_top = -308.0
margin_right = -15.0
margin_bottom = -94.0
grow_horizontal = 0
rect_scale = Vector2( 1.9, 1.9 )
rect_pivot_offset = Vector2( 308, 214 )
theme = ExtResource( 2 )
scroll_horizontal_enabled = false
script = ExtResource( 1 )

[node name="V" type="VBoxContainer" parent="."]
margin_right = 296.0
margin_bottom = 426.0
size_flags_horizontal = 3

[node name="Buffer1" type="Control" parent="V"]
margin_right = 296.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )

[node name="Keybinds" type="VBoxContainer" parent="V"]
margin_left = 109.0
margin_top = 20.0
margin_right = 187.0
margin_bottom = 130.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/Keybinds"]
margin_right = 78.0
margin_bottom = 14.0
text = "Keybinds"
align = 1

[node name="LeftKat" type="HBoxContainer" parent="V/Keybinds"]
margin_top = 18.0
margin_right = 78.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="V/Keybinds/LeftKat"]
margin_top = 3.0
margin_right = 62.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Left Kat"

[node name="Button" type="Button" parent="V/Keybinds/LeftKat"]
margin_left = 66.0
margin_right = 78.0
margin_bottom = 20.0

[node name="LeftDon" type="HBoxContainer" parent="V/Keybinds"]
margin_top = 42.0
margin_right = 78.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="V/Keybinds/LeftDon"]
margin_top = 3.0
margin_right = 62.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Left Don"

[node name="Button" type="Button" parent="V/Keybinds/LeftDon"]
margin_left = 66.0
margin_right = 78.0
margin_bottom = 20.0

[node name="RightDon" type="HBoxContainer" parent="V/Keybinds"]
margin_top = 66.0
margin_right = 78.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="V/Keybinds/RightDon"]
margin_top = 3.0
margin_right = 62.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Right Don"

[node name="Button" type="Button" parent="V/Keybinds/RightDon"]
margin_left = 66.0
margin_right = 78.0
margin_bottom = 20.0

[node name="RightKat" type="HBoxContainer" parent="V/Keybinds"]
margin_top = 90.0
margin_right = 78.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="V/Keybinds/RightKat"]
margin_top = 3.0
margin_right = 62.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Right Kat"

[node name="Button" type="Button" parent="V/Keybinds/RightKat"]
margin_left = 66.0
margin_right = 78.0
margin_bottom = 20.0

[node name="Buffer2" type="HSeparator" parent="V"]
margin_left = 73.0
margin_top = 134.0
margin_right = 223.0
margin_bottom = 167.0
rect_min_size = Vector2( 150, 33 )
size_flags_horizontal = 4

[node name="ExtraDisplays" type="VBoxContainer" parent="V"]
margin_left = 85.0
margin_top = 171.0
margin_right = 211.0
margin_bottom = 237.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/ExtraDisplays"]
margin_right = 126.0
margin_bottom = 14.0
text = "Extra Displays"
align = 1

[node name="LateEarly" type="HBoxContainer" parent="V/ExtraDisplays"]
margin_top = 18.0
margin_right = 126.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="V/ExtraDisplays/LateEarly"]
margin_top = 3.0
margin_right = 93.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Late/Early Text"

[node name="Options" type="OptionButton" parent="V/ExtraDisplays/LateEarly"]
margin_left = 97.0
margin_right = 126.0
margin_bottom = 20.0

[node name="HitError" type="HBoxContainer" parent="V/ExtraDisplays"]
margin_top = 42.0
margin_right = 126.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="V/ExtraDisplays/HitError"]
margin_top = 5.0
margin_right = 98.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Hit Error Bar"

[node name="Toggle" type="CheckBox" parent="V/ExtraDisplays/HitError"]
margin_left = 102.0
margin_right = 126.0
margin_bottom = 24.0

[node name="Buffer3" type="Control" parent="V"]
margin_top = 241.0
margin_right = 296.0
margin_bottom = 253.0
rect_min_size = Vector2( 0, 12 )

[node name="Resolution" type="VBoxContainer" parent="V"]
margin_left = 95.0
margin_top = 257.0
margin_right = 201.0
margin_bottom = 323.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/Resolution"]
margin_right = 106.0
margin_bottom = 14.0
text = "Resolution (WIP)"
align = 1

[node name="Options" type="OptionButton" parent="V/Resolution"]
margin_left = 38.0
margin_top = 18.0
margin_right = 67.0
margin_bottom = 38.0
size_flags_horizontal = 4

[node name="Fullscreen" type="HBoxContainer" parent="V/Resolution"]
margin_top = 42.0
margin_right = 106.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="V/Resolution/Fullscreen"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Fullscreen"

[node name="Toggle" type="CheckBox" parent="V/Resolution/Fullscreen"]
margin_left = 82.0
margin_right = 106.0
margin_bottom = 24.0

[node name="Buffer4" type="HSeparator" parent="V"]
margin_left = 73.0
margin_top = 327.0
margin_right = 223.0
margin_bottom = 360.0
rect_min_size = Vector2( 150, 33 )
size_flags_horizontal = 4

[node name="AudioLabel" type="Label" parent="V"]
margin_top = 364.0
margin_right = 296.0
margin_bottom = 378.0
text = "Audio"
align = 1

[node name="Offset" type="HBoxContainer" parent="V"]
margin_left = 97.0
margin_top = 382.0
margin_right = 198.0
margin_bottom = 406.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/Offset"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Offset"

[node name="LineEdit" type="LineEdit" parent="V/Offset"]
margin_left = 43.0
margin_right = 101.0
margin_bottom = 24.0
align = 2
placeholder_text = "0"

[node name="Buffer5" type="Control" parent="V"]
margin_top = 410.0
margin_right = 296.0
margin_bottom = 426.0
rect_min_size = Vector2( 0, 16 )

[connection signal="pressed" from="V/Keybinds/LeftKat/Button" to="." method="button_pressed" binds= [ "LeftKat" ]]
[connection signal="pressed" from="V/Keybinds/LeftDon/Button" to="." method="button_pressed" binds= [ "LeftDon" ]]
[connection signal="pressed" from="V/Keybinds/RightDon/Button" to="." method="button_pressed" binds= [ "RightDon" ]]
[connection signal="pressed" from="V/Keybinds/RightKat/Button" to="." method="button_pressed" binds= [ "RightKat" ]]
[connection signal="item_selected" from="V/ExtraDisplays/LateEarly/Options" to="." method="late_early"]
[connection signal="toggled" from="V/ExtraDisplays/HitError/Toggle" to="." method="hit_error"]
[connection signal="item_selected" from="V/Resolution/Options" to="." method="res_changed"]
[connection signal="toggled" from="V/Resolution/Fullscreen/Toggle" to="." method="toggle_fullscreen"]
[connection signal="text_changed" from="V/Offset/LineEdit" to="." method="change_offset"]
